# lingmo-apps-common

./: CMakeLists.txt  README.md
.github/workflows/: package.yml
debian/: changelog  control  copyright  liblingmoappscommon-dev.install  liblingmoappscommon1.install
include/lingmo-apps-common/: export.h
rpm/: lingmo-apps-common.spec
